add schedule and announcement

--- a/src/scss/curriculum/partials/_variables.scss
+++ b/src/scss/curriculum/partials/_variables.scss
@@ -13,8 +13,11 @@ $link-color: $event-color-3;
 // fonts
 
 $primary-font: 'Source Sans Pro', sans-serif;
-
+$primary-font-size: 1.5em;
 //colum number
 
-$columns-number: 5;
+$columns-number: 7;
 $row-height: 80px;
+
+// period
+$period: 13;
